@@ -413,4 +413,12 @@ public interface ERDesignerBundle {
   String ONLINEHELP = "ONLINEHELP";
   /** \u0053\u0074\u0065\u0072\u0065\u006f\u0074\u0079\u0070\u0065. */
   String STEREOTYPE = "STEREOTYPE";
+  /** \u0054\u0061\u0072\u0067\u0065\u0074. */
+  String TARGET = "TARGET";
+  /** \u0053\u0072\u0063\u0020\u0064\u0069\u0072\u0065\u0063\u0074\u006f\u0072\u0079. */
+  String SRCDIRECTORY = "SRCDIRECTORY";
+  /** \u0050\u0061\u0063\u006b\u0061\u0067\u0065. */
+  String PACKAGENAME = "PACKAGENAME";
+  /** \u004f\u0070\u0065\u006e\u0058\u0061\u0076\u0061\u0020\u0045\u0078\u0070\u006f\u0072\u0074\u002e\u002e\u002e. */
+  String OPENXAVAEXPORT = "OPENXAVAEXPORT";
 }
