@@ -223,3 +223,7 @@ DOCSTEP3.text=\u0044\u006f\u0063\u0075\u006d\u0065\u006e\u0074\u0061\u0074\u0069
 HELP.text=\u0048\u0065\u006c\u0070\u002e\u002e\u002e
 ONLINEHELP.text=\u004f\u006e\u006c\u0069\u006e\u0065\u0020\u0068\u0065\u006c\u0070
 STEREOTYPE.text=\u0053\u0074\u0065\u0072\u0065\u006f\u0074\u0079\u0070\u0065
+TARGET.text=\u0054\u0061\u0072\u0067\u0065\u0074
+SRCDIRECTORY.text=\u0053\u0072\u0063\u0020\u0064\u0069\u0072\u0065\u0063\u0074\u006f\u0072\u0079
+PACKAGENAME.text=\u0050\u0061\u0063\u006b\u0061\u0067\u0065
+OPENXAVAEXPORT.text=\u004f\u0070\u0065\u006e\u0058\u0061\u0076\u0061\u0020\u0045\u0078\u0070\u006f\u0072\u0074\u002e\u002e\u002e
